RESOLVED FIXED28971
WebView::initWithFrame fails if there's no host window
https://bugs.webkit.org/show_bug.cgi?id=28971
Summary WebView::initWithFrame fails if there's no host window
Adam Roben (:aroben)
Reported 2009-09-04 09:31:29 PDT
Created attachment 39065 [details] Patch v1 WebView::initWithFrame fails if there's no valid host window. This is not our documented behavior. This method should work whether or not there's a valid host window.
Attachments
Patch v1 (2.11 KB, patch)
2009-09-04 09:31 PDT, Adam Roben (:aroben)
hyatt: review+
Adam Roben (:aroben)
Comment 1 2009-09-04 09:31:54 PDT
Dave Hyatt
Comment 2 2009-09-04 09:35:38 PDT
Comment on attachment 39065 [details] Patch v1 r=me
Adam Roben (:aroben)
Comment 3 2009-09-04 10:07:18 PDT
Fixed in r48059
Adam Roben (:aroben)
Comment 4 2009-09-04 10:10:57 PDT
Whoops, I meant: Fixed in r48060
Note You need to log in before you can comment on or make changes to this bug.