Make WebView function without a parent window

When WebView has no parent window, it becomes a message-only window,
which hides it from the screen and prevents it from appearing on the
taskbar.

Fixes <http://webkit.org/b/28971> <rdar://problem/4976998>
WebView::initWithFrame fails if there's no host window

Reviewed by Dave Hyatt.

* WebView.cpp:
(WebView::initWithFrame): m_hostWindow is null, use HWND_MESSAGE as
our parent window, which will make us a message-only window.
(WebView::setHostWindow): If he new host window is null, use
HWND_MESSAGE as our parent window, which will make us a message-only
window.

git-svn-id: svn://svn.chromium.org/blink/trunk@48060 bbb929c8-8fbe-4397-9dbb-9b2b20218538